--- a/django/backend/blog/templates/blog/base.html
+++ b/django/backend/blog/templates/blog/base.html
@@ -4,25 +4,48 @@
 <html>
 <head>
     <title>{% block title %}{% endblock %}</title>
+    <link href="{% static "css/blog.css" %}" rel="stylesheet">
+    {% comment %} <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> {% endcomment %}
     <link href="{% static 'bootstrap-5.0.2/css/bootstrap.min.css' %}" rel="stylesheet">
+
 </head>
 
 <body>
    <!-- Responsive navbar-->
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#!">Start Bootstrap</a>
+            <a class="navbar-brand" href="{% url "blog:post_list" %}">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link {% if request.resolver_match.url_name == 'post_list' %}active{% endif %}" href="{% url "blog:post_list" %}">
-                        Блог
-                    </a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">О нас</a></li>
                     <li class="nav-item"><a class="nav-link" href="#!">Контакты</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Блог</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin">Админ меню</a></li>
-                    <li class="nav-item"><a class="nav-link active" aria-current="page" href="/admin">Погода</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'post_list' %}active{% endif %}" href="{% url "blog:post_list" %}">
+                        Блог
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'list_city_weather' %}active{% endif %}" href="{% url "weather:list_city_weather" %}">
+                        Погода
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'list_book' %}active{% endif %}" href="{% url "book:list_book" %}">
+                        Книги
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'product_list' %}active{% endif %}" href="{% url "marketplace:product_list" %}">
+                        Маркетплейс
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if request.resolver_match.url_name == 'premier_movie' %}active{% endif %}" href="{% url "movie:premier_movie" %}">
+                            Фильмы
+                        </a>
+                        </li>
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="/admin">Админпанель</a></li>
                 </ul>
             </div>
         </div>
