--- a/django/backend/weather/templates/weather/list_weather.html
+++ b/django/backend/weather/templates/weather/list_weather.html
@@ -1,17 +1,60 @@
 {% extends "blog/base.html" %}
 
-{% block title %}Погода{% endblock %}
-
+{% block title %}Погода {% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css" />
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
+ 
+<div class="row ">
+    <div class="col">
+        <div class="row">
 
+           <form method = "post" action="{% url "weather:сity_create" %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <input type = "submit" value = "submit">
+            </form>
+            
+        </div>
+    </div>
+</div>
 
-{% for city in weather_data%}
+<section class="section">
+    <div class="container">
+        <div class="columns">
+            <div class="column is-offset-4 is-4">
+            {% for weather in weather_data %}
+            <div class="box">
+                <article class="media">
+                <div class="media-left">
+                <figure class="image is-50x50">
+                <img src="http://openweathermap.org/img/w/{{ weather.icon }}.png" alt="Image">
+                </figure>
+                </div>
+                <div class="media-content">
+                <div class="content">
+                <p>
+                <span class="title">{{ weather.city }}</span>
+                <br>
+                <span class="subtitle">{{ weather.temperature }}° C</span>
+                <br> {{ weather.description }}
+                </p>
 
-    {{ city }} <br>
-
-{% endfor %}
+                <a href='{% url "weather:city_delete" pk=weather.pk %}'>
+                <i class="bi bi-trash"></i>
+                </a>
+                
+                </div>
+                </div>
+                </article>
+            </div>
+            {% endfor %}
+            </div>
+        </div>
+    </div>
+</section>
 
 
 {% endblock %}
